scripts/nullness/nullgtn/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8.txt
../nullgtn/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/Parking.java:35: error: [return] incompatible types in return.
        return placePool;
               ^
  type of expression: @Initialized @Nullable ParkingPlacePool
  method return type: @Initialized @NonNull ParkingPlacePool
../nullgtn/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/ParkingPlacePool.java:59: error: [return] incompatible types in return.
        return place;
               ^
  type of expression: @FBCBottom @Nullable ParkingPlace
  method return type: @Initialized @NonNull ParkingPlace
../nullgtn/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/Car.java:19: error: [initialization.fields.uninitialized] the constructor does not initialize fields: parkings
    public Car() {
           ^
../nullgtn/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/CopyOfParkingPlacePool.java:48: error: [return] incompatible types in return.
            return place;
                   ^
  type of expression: @Initialized @Nullable ParkingPlace
  method return type: @Initialized @NonNull ParkingPlace
4 errors
